Other interesting projects" alignment fixed

--- a/index.css
+++ b/index.css
@@ -276,6 +276,8 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	justify-content: center;
+    text-align: center;
 }
 
 .slideblog{
@@ -377,6 +379,10 @@
 	width: 93%;
 	overflow: hidden;
 	border-radius: 0%;
+	display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .projectHeader, .projectStats, .projectDescription {
